fix: date picker text color in dark mode
fix https://github.com/pengx17/logseq-dev-theme/issues/53

--- a/src/_miscs.scss
+++ b/src/_miscs.scss
@@ -204,7 +204,3 @@ progress::-webkit-progress-value {
 .link_preview__root {
   max-width: 100%;
 }
-
-.rc-datepicker {
-  color: #333;
-}
